fix loader on small window size

--- a/src/components/InfiniteRooms/Infinite.css
+++ b/src/components/InfiniteRooms/Infinite.css
@@ -1,12 +1,12 @@
 .infinite {
     overflow: hidden;
     overflow-y: scroll;
-    //box-sizing: border-box;
     padding: 20px;
 }
+
 .spinner {
     margin: 20px auto;
-    width: 50px;
+    width: 100%;
     height: 40px;
     text-align: center;
     font-size: 10px;
